--- a/TravelLive/View/Map.storyboard
+++ b/TravelLive/View/Map.storyboard
@@ -8,17 +8,32 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Map View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
+                <viewController id="Y6W-OH-hqX" customClass="MapViewController" customModule="TravelLive" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RIX-gF-6pu" customClass="GMSMapView">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="RIX-gF-6pu" secondAttribute="bottom" id="2Rl-4b-dHr"/>
+                            <constraint firstItem="RIX-gF-6pu" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="CSq-Mm-Bgp"/>
+                            <constraint firstItem="RIX-gF-6pu" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="FiC-yr-z4g"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="RIX-gF-6pu" secondAttribute="trailing" id="ozG-xV-z34"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="lhS-ts-1Gn"/>
+                    <connections>
+                        <outlet property="mapView" destination="RIX-gF-6pu" id="VMk-Eu-qhm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
