--- a/TravelLive/View/Auth/AuthView.xib
+++ b/TravelLive/View/Auth/AuthView.xib
@@ -12,17 +12,16 @@
                 <outlet property="authTitleLabel" destination="UM3-oa-OG5" id="VFI-gm-EFY"/>
                 <outlet property="loginButton" destination="ETc-Iy-VXm" id="aTS-KE-ivK"/>
                 <outlet property="loginWithAppleButton" destination="CpQ-Mk-gOc" id="JVF-Zx-zaM"/>
-                <outlet property="loginWithNativeButton" destination="AVc-me-7I1" id="IFu-Qe-hPS"/>
                 <outlet property="textLabel" destination="F2I-Zw-OdD" id="19g-O1-uOb"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="Zbw-Uk-AOQ">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="350"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="283"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="d1T-JZ-PzO">
-                    <rect key="frame" x="20" y="127.5" width="374" height="135"/>
+                    <rect key="frame" x="20" y="127.5" width="374" height="60"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CpQ-Mk-gOc">
                             <rect key="frame" x="0.0" y="0.0" width="374" height="60"/>
@@ -30,24 +29,25 @@
                                 <constraint firstAttribute="height" constant="60" id="TBC-zZ-6Vo"/>
                             </constraints>
                             <state key="normal" title="Button"/>
-                            <buttonConfiguration key="configuration" style="plain" image="apple" title="Continue with Apple">
+                            <buttonConfiguration key="configuration" style="plain" title="Continue with Apple">
                                 <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </buttonConfiguration>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AVc-me-7I1">
-                            <rect key="frame" x="0.0" y="75" width="374" height="60"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="60" id="VIF-0Q-pvf"/>
-                            </constraints>
-                            <state key="normal" title="Button"/>
-                            <buttonConfiguration key="configuration" style="plain" image="email" title="Continue with Email">
-                                <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </buttonConfiguration>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                    <real key="value" value="1"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                    <color key="value" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                    <real key="value" value="10"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </button>
                     </subviews>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="sVm-BU-M7Y">
-                    <rect key="frame" x="40" y="292.5" width="334" height="31"/>
+                    <rect key="frame" x="40" y="217.5" width="334" height="31"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F2I-Zw-OdD">
                             <rect key="frame" x="0.0" y="0.0" width="265.5" height="31"/>
@@ -61,6 +61,9 @@
                             <buttonConfiguration key="configuration" style="plain" title="Log in">
                                 <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </buttonConfiguration>
+                            <connections>
+                                <action selector="loginWithEmail:" destination="-1" eventType="touchUpInside" id="v5d-uO-3yC"/>
+                            </connections>
                         </button>
                     </subviews>
                 </stackView>
@@ -85,11 +88,7 @@
                 <constraint firstItem="d1T-JZ-PzO" firstAttribute="top" secondItem="UM3-oa-OG5" secondAttribute="bottom" constant="50" id="jcr-cQ-tWe"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-159.42028985507247" y="21.763392857142858"/>
+            <point key="canvasLocation" x="-159.42028985507247" y="15.736607142857142"/>
         </view>
     </objects>
-    <resources>
-        <image name="apple" width="32" height="32"/>
-        <image name="email" width="32" height="32"/>
-    </resources>
 </document>
