--- a/TravelLive/View/Base.lproj/Main.storyboard
+++ b/TravelLive/View/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,7 +21,7 @@
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Osu-Ea-km6"/>
-                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                        <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="XTu-zX-FGC" firstAttribute="leading" secondItem="Osu-Ea-km6" secondAttribute="leading" constant="16" id="1Zr-GH-rqc"/>
                             <constraint firstItem="Osu-Ea-km6" firstAttribute="bottom" secondItem="XTu-zX-FGC" secondAttribute="bottom" id="bwq-9U-egF"/>
@@ -30,19 +29,7 @@
                             <constraint firstItem="XTu-zX-FGC" firstAttribute="top" secondItem="Osu-Ea-km6" secondAttribute="top" constant="400" id="k2q-1k-Q2h"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="qKM-Tb-M8L">
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="oSw-4p-aP4">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="QuV-uh-6ZX">
-                                <rect key="frame" x="302" y="5" width="92" height="34.5"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
-                            </button>
-                            <connections>
-                                <segue destination="JcO-YG-WjP" kind="show" id="KW2-0P-Cc8"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="qKM-Tb-M8L"/>
                     <connections>
                         <outlet property="auth" destination="XTu-zX-FGC" id="NX1-vT-QVu"/>
                     </connections>
@@ -65,7 +52,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A76-ts-2RH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="899" y="-951"/>
+            <point key="canvasLocation" x="736" y="-872"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="24I-Au-VCI">
@@ -86,9 +73,4 @@
             <point key="canvasLocation" x="-1165" y="-871"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
