Modify Tab bar VC name

--- a/TravelLive/View/Base.lproj/Main.storyboard
+++ b/TravelLive/View/Base.lproj/Main.storyboard
@@ -41,7 +41,7 @@
         <!--Tab Bar View Controller-->
         <scene sceneID="Hsp-0n-XFj">
             <objects>
-                <tabBarController storyboardIdentifier="STTabBarViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="JcO-YG-WjP" customClass="STTabBarViewController" customModule="TravelLive" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="JcO-YG-WjP" customClass="TabBarViewController" customModule="TravelLive" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="sLm-l0-wGN"/>
                     <size key="freeformSize" width="414" height="896"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="su9-Y9-cqo">
