--- a/TravelLive/View/Chat.storyboard
+++ b/TravelLive/View/Chat.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -11,25 +11,33 @@
         <!--Chat View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="ChatViewController" customModule="TravelLive" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ChatViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="ChatViewController" customModule="TravelLive" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="648"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zZE-Nx-sqX">
-                                <rect key="frame" x="16" y="418" width="382" height="200"/>
+                                <rect key="frame" x="8" y="379" width="256" height="150"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="sdm-uy-C4g"/>
+                                    <constraint firstAttribute="height" constant="150" id="sdm-uy-C4g"/>
                                 </constraints>
                             </tableView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qVN-6X-8PQ">
+                                <rect key="frame" x="8" y="534" width="256" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="zZE-Nx-sqX" secondAttribute="bottom" constant="30" id="0Eq-8J-v6Q"/>
-                            <constraint firstItem="zZE-Nx-sqX" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="ChK-pO-ODw"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zZE-Nx-sqX" secondAttribute="trailing" constant="16" id="yFI-gm-iE7"/>
+                            <constraint firstItem="zZE-Nx-sqX" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="8" id="ChK-pO-ODw"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="qVN-6X-8PQ" secondAttribute="trailing" constant="150" id="GsZ-yT-Mlf"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="qVN-6X-8PQ" secondAttribute="bottom" constant="80" id="HAp-JT-ka5"/>
+                            <constraint firstItem="qVN-6X-8PQ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="8" id="VeN-6U-Tv5"/>
+                            <constraint firstItem="qVN-6X-8PQ" firstAttribute="top" secondItem="zZE-Nx-sqX" secondAttribute="bottom" constant="5" id="sCe-3B-Pqd"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zZE-Nx-sqX" secondAttribute="trailing" constant="150" id="yFI-gm-iE7"/>
                         </constraints>
                     </view>
                     <size key="freeformSize" width="414" height="648"/>
