--- a/TravelLive/View/Chat.storyboard
+++ b/TravelLive/View/Chat.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="648"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zZE-Nx-sqX">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zZE-Nx-sqX">
                                 <rect key="frame" x="8" y="379" width="256" height="150"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
@@ -24,25 +24,42 @@
                                 </constraints>
                             </tableView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qVN-6X-8PQ">
-                                <rect key="frame" x="8" y="534" width="256" height="34"/>
+                                <rect key="frame" x="8" y="534" width="206" height="34"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hUY-cY-Gv4">
+                                <rect key="frame" x="214" y="537" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="UPd-CT-eTt"/>
+                                    <constraint firstAttribute="height" constant="30" id="xBn-7w-RxF"/>
+                                </constraints>
+                                <color key="tintColor" systemColor="linkColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="location.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="sendMessage:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Unl-L6-b9X"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="zZE-Nx-sqX" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="8" id="ChK-pO-ODw"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="qVN-6X-8PQ" secondAttribute="trailing" constant="150" id="GsZ-yT-Mlf"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="qVN-6X-8PQ" secondAttribute="trailing" constant="200" id="GsZ-yT-Mlf"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="qVN-6X-8PQ" secondAttribute="bottom" constant="80" id="HAp-JT-ka5"/>
                             <constraint firstItem="qVN-6X-8PQ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="8" id="VeN-6U-Tv5"/>
+                            <constraint firstItem="hUY-cY-Gv4" firstAttribute="leading" secondItem="qVN-6X-8PQ" secondAttribute="trailing" id="hQk-NP-nkl"/>
                             <constraint firstItem="qVN-6X-8PQ" firstAttribute="top" secondItem="zZE-Nx-sqX" secondAttribute="bottom" constant="5" id="sCe-3B-Pqd"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zZE-Nx-sqX" secondAttribute="trailing" constant="150" id="yFI-gm-iE7"/>
+                            <constraint firstItem="hUY-cY-Gv4" firstAttribute="top" secondItem="zZE-Nx-sqX" secondAttribute="bottom" constant="8" id="zCx-cZ-4CY"/>
                         </constraints>
                     </view>
                     <size key="freeformSize" width="414" height="648"/>
                     <connections>
                         <outlet property="chatView" destination="zZE-Nx-sqX" id="cBA-vJ-v3G"/>
+                        <outlet property="inputTextfield" destination="qVN-6X-8PQ" id="dmv-0M-ptE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -51,6 +68,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="location.fill" catalog="system" width="128" height="121"/>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
