--- a/TravelLive/View/Chat.storyboard
+++ b/TravelLive/View/Chat.storyboard
@@ -17,22 +17,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zZE-Nx-sqX">
-                                <rect key="frame" x="8" y="379" width="256" height="150"/>
+                                <rect key="frame" x="8" y="359" width="226" height="150"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="sdm-uy-C4g"/>
                                 </constraints>
                             </tableView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qVN-6X-8PQ">
-                                <rect key="frame" x="8" y="534" width="206" height="34"/>
+                            <textField opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qVN-6X-8PQ">
+                                <rect key="frame" x="8" y="514" width="206" height="34"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hUY-cY-Gv4">
-                                <rect key="frame" x="214" y="537" width="50" height="30"/>
+                                <rect key="frame" x="214" y="517" width="40" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="UPd-CT-eTt"/>
+                                    <constraint firstAttribute="width" constant="40" id="UPd-CT-eTt"/>
                                     <constraint firstAttribute="height" constant="30" id="xBn-7w-RxF"/>
                                 </constraints>
                                 <color key="tintColor" systemColor="linkColor"/>
@@ -48,11 +48,11 @@
                         <constraints>
                             <constraint firstItem="zZE-Nx-sqX" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="8" id="ChK-pO-ODw"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="qVN-6X-8PQ" secondAttribute="trailing" constant="200" id="GsZ-yT-Mlf"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="qVN-6X-8PQ" secondAttribute="bottom" constant="80" id="HAp-JT-ka5"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="qVN-6X-8PQ" secondAttribute="bottom" constant="100" id="HAp-JT-ka5"/>
                             <constraint firstItem="qVN-6X-8PQ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="8" id="VeN-6U-Tv5"/>
                             <constraint firstItem="hUY-cY-Gv4" firstAttribute="leading" secondItem="qVN-6X-8PQ" secondAttribute="trailing" id="hQk-NP-nkl"/>
                             <constraint firstItem="qVN-6X-8PQ" firstAttribute="top" secondItem="zZE-Nx-sqX" secondAttribute="bottom" constant="5" id="sCe-3B-Pqd"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zZE-Nx-sqX" secondAttribute="trailing" constant="150" id="yFI-gm-iE7"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zZE-Nx-sqX" secondAttribute="trailing" constant="180" id="yFI-gm-iE7"/>
                             <constraint firstItem="hUY-cY-Gv4" firstAttribute="top" secondItem="zZE-Nx-sqX" secondAttribute="bottom" constant="8" id="zCx-cZ-4CY"/>
                         </constraints>
                     </view>
