Complete streamer and multiple viewer sycn caption

--- a/TravelLive/View/Chat.storyboard
+++ b/TravelLive/View/Chat.storyboard
@@ -42,15 +42,43 @@
                                     <action selector="sendMessage:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Unl-L6-b9X"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ufc-MG-wuk" customClass="EdgeInsetLabel" customModule="TravelLive" customModuleProvider="target">
+                                <rect key="frame" x="16" y="558" width="0.0" height="40"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="leftTextInset">
+                                        <real key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="rightTextInset">
+                                        <real key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="topTextInset">
+                                        <real key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="bottomTextInset">
+                                        <real key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="characterSpacing">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="zZE-Nx-sqX" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="8" id="ChK-pO-ODw"/>
+                            <constraint firstAttribute="bottom" secondItem="Ufc-MG-wuk" secondAttribute="bottom" constant="50" id="Gbc-KJ-3V4"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="qVN-6X-8PQ" secondAttribute="trailing" constant="200" id="GsZ-yT-Mlf"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="qVN-6X-8PQ" secondAttribute="bottom" constant="100" id="HAp-JT-ka5"/>
+                            <constraint firstItem="Ufc-MG-wuk" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="MPd-dd-qYF"/>
                             <constraint firstItem="qVN-6X-8PQ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="8" id="VeN-6U-Tv5"/>
                             <constraint firstItem="hUY-cY-Gv4" firstAttribute="leading" secondItem="qVN-6X-8PQ" secondAttribute="trailing" id="hQk-NP-nkl"/>
+                            <constraint firstItem="Ufc-MG-wuk" firstAttribute="top" secondItem="qVN-6X-8PQ" secondAttribute="bottom" constant="10" id="mIM-vp-U0K"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Ufc-MG-wuk" secondAttribute="trailing" constant="16" id="mM1-cQ-esm"/>
                             <constraint firstItem="qVN-6X-8PQ" firstAttribute="top" secondItem="zZE-Nx-sqX" secondAttribute="bottom" constant="5" id="sCe-3B-Pqd"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zZE-Nx-sqX" secondAttribute="trailing" constant="180" id="yFI-gm-iE7"/>
                             <constraint firstItem="hUY-cY-Gv4" firstAttribute="top" secondItem="zZE-Nx-sqX" secondAttribute="bottom" constant="8" id="zCx-cZ-4CY"/>
@@ -58,6 +86,7 @@
                     </view>
                     <size key="freeformSize" width="414" height="648"/>
                     <connections>
+                        <outlet property="caption" destination="Ufc-MG-wuk" id="dPn-EV-Nuk"/>
                         <outlet property="chatView" destination="zZE-Nx-sqX" id="cBA-vJ-v3G"/>
                         <outlet property="inputTextfield" destination="qVN-6X-8PQ" id="dmv-0M-ptE"/>
                     </connections>
