--- a/TravelLive/View/Map.storyboard
+++ b/TravelLive/View/Map.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RIX-gF-6pu" customClass="GMSMapView">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                         </subviews>
@@ -25,8 +25,8 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="RIX-gF-6pu" secondAttribute="bottom" id="2Rl-4b-dHr"/>
-                            <constraint firstItem="RIX-gF-6pu" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="CSq-Mm-Bgp"/>
                             <constraint firstItem="RIX-gF-6pu" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="FiC-yr-z4g"/>
+                            <constraint firstItem="RIX-gF-6pu" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="Wiw-RF-3d6"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="RIX-gF-6pu" secondAttribute="trailing" id="ozG-xV-z34"/>
                         </constraints>
                     </view>
